# onidata-api

./: .dockerignore  .editorconfig  .env_samples  .gitignore  .pre-commit-config.yaml  Dockerfile  Dockerfile.dev  Dockerfile.prod  README.md  docker-compose-dev.yml  docker-compose-prod.yml  fly.toml  pyproject.toml
.github/workflows/: CI.yml
app/: conftest.py  settings.py  urls.py
app/accounts/: admin.py  models.py  serializers.py  urls.py  views.py
app/accounts/migrations/: 0001_initial.py
app/accounts/tests/: conftest.py  test_manager.py  test_user_model.py
app/accounts/tests/serializers/: test_my_auth_token_serializer.py  test_whoiam.py
app/accounts/tests/views/: test_get_token.py  test_whoiam.py
app/core/: admin.py  models.py  permission.py  serializers.py  services.py  urls.py  views.py
app/core/migrations/: 0001_initial.py  0002_alter_loan_interest_rate_alter_loan_nominal_value_and_more.py  0002_rename_interest_rate_loan_rate_and_more.py  0003_loan_request_date.py  0004_payment_payment_date.py
app/core/tests/: conftest.py  test_services.py  test_version.py
app/core/tests/models/: test_loan.py  test_payment.py
app/core/tests/serializers/: test_loan.py  test_payment.py
app/core/tests/views/: test_get_client_ip.py  test_version.py
app/core/tests/views/loans/: test_amount_due.py  test_create.py  test_interest.py  test_list.py  test_loan_interest.py  test_loan_payment_list.py  test_payment_list.py  test_payment_sum.py  test_retrieve.py
app/core/tests/views/payments/: test_create.py  test_list.py  test_retrieve.py
app/core/views/: __init__.py  base.py  loan.py  payment.py
nginx/: Dockerfile.proxy1  Dockerfile.proxy2  default.conf  default.proxy1.conf
